commit com mudanças, criação do style.css

--- a/index.html
+++ b/index.html
@@ -1,45 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pedra, Papel e Tesoura</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+</body>
+
+</html>
 <html>
 
 <body>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        .titulo {
-            background-color: rgb(102, 46, 192)
-        }
-
-        .titulo h1 {
-            text-align: center;
-            margin-bottom: 10px;
-            color: white;
-        }
-
-        .titulo h2 {
-            text-align: center;
-        }
-
-        .player-options img,
-        .enemy-options img {
-            margin: 0 90px;
-            max-width: 150px;
-            opacity: 0.5;
-            cursor: pointer;
-
-        }
-
-        .player-options,
-        .enemy-options {
-            width: 50%;
-        }
-
-        .align {
-            display: flex;
-        }
-    </style>
     <div class="titulo">
         <h1>Pedra, papel ou tesoura!</h1>
         <h2 class="vencedor"></h2>
